--- a/index.html
+++ b/index.html
@@ -30,7 +30,10 @@
       property="og:description"
       content="Explore the portfolio of Amir Ben Abdallah (A.B.A), a freelance graphic designer and software engineering student. Discover projects in design, UI/UX, and web development."
     />
-    <meta property="og:image" content="https://res.cloudinary.com/drvz8xmfk/image/upload/f_auto,q_auto/v1762695299/og_egcakg.jpg" />
+    <meta
+      property="og:image"
+      content="https://res.cloudinary.com/drvz8xmfk/image/upload/f_auto,q_auto/v1762695299/og_egcakg.jpg"
+    />
     <meta property="og:image:alt" content="A.B.A | Portfolio" />
     <meta property="og:url" content="https://amirbenabdallah.netlify.app" />
     <meta property="og:type" content="website" />
@@ -1106,7 +1109,167 @@
                       </div>
                     </div>
                     <div class="works-wrap style-1">
-                      <!-- Project 1: EasyWayRent -->
+                      <!-- Project 1: Mdalab -->
+                      <div class="works-item scrolling-effect effectLeft">
+                        <a
+                          class="glightbox image"
+                          href="https://res.cloudinary.com/drvz8xmfk/image/upload/v1762809717/mda_iiqplg.webp"
+                          data-gallery="example-1"
+                        >
+                          <img
+                            class="lazyload"
+                            src="https://res.cloudinary.com/drvz8xmfk/image/upload/v1762809717/mda_iiqplg.webp"
+                            data-src="https://res.cloudinary.com/drvz8xmfk/image/upload/v1762809717/mda_iiqplg.webp"
+                            alt="Mdalab"
+                            title="Click to open image"
+                          />
+                        </a>
+                        <div class="content">
+                          <div class="infor">
+                            <div class="sub-heading sub">
+                              Cultural Center Management Platform
+                            </div>
+                            <h3 class="title">
+                              <a
+                                href="https://www.mdalab.art"
+                                target="_blank"
+                                title="Visit Website"
+                                rel="noopener noreferrer"
+                                >Mdalab</a
+                              >
+                            </h3>
+                            <div class="tags d-flex gap-3">
+                              <p class="link fw-medium type-tags">
+                                <img
+                                  src="https://files.svgcdn.io/devicon/mongodb.svg"
+                                  alt="MongoDB"
+                                  width="16"
+                                  height="16"
+                                  loading="lazy"
+                                />
+                                MongoDB
+                              </p>
+                              <p class="link fw-medium type-tags">
+                                <img
+                                  src="https://files.svgcdn.io/devicon/express.svg"
+                                  alt="Express"
+                                  width="16"
+                                  height="16"
+                                  loading="lazy"
+                                />
+                                Express
+                              </p>
+                              <p class="link fw-medium type-tags">
+                                <img
+                                  src="https://files.svgcdn.io/material-icon-theme/angular.svg"
+                                  alt="Angular"
+                                  width="16"
+                                  height="16"
+                                  loading="lazy"
+                                />
+                                Angular
+                              </p>
+                              <p class="link fw-medium type-tags">
+                                <img
+                                  src="https://files.svgcdn.io/devicon/nodejs.svg"
+                                  alt="Node.js"
+                                  width="16"
+                                  height="16"
+                                  loading="lazy"
+                                />
+                                Node.js
+                              </p>
+                            </div>
+                          </div>
+                          <a
+                            href="https://www.mdalab.art"
+                            class="btn-links"
+                            title="Visit Website"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                          >
+                            <span class="material-symbols-outlined"
+                              >arrow_outward</span
+                            >
+                          </a>
+                        </div>
+                      </div>
+
+                      <!-- Project 2: Orvana Trading -->
+                      <div class="works-item scrolling-effect effectLeft">
+                        <a
+                          class="glightbox image"
+                          href="https://res.cloudinary.com/drvz8xmfk/image/upload/v1762809717/orvanaa_qwf2gj.webp"
+                          data-gallery="example-1"
+                        >
+                          <img
+                            class="lazyload"
+                            src="https://res.cloudinary.com/drvz8xmfk/image/upload/v1762809717/orvanaa_qwf2gj.webp"
+                            data-src="https://res.cloudinary.com/drvz8xmfk/image/upload/v1762809717/orvanaa_qwf2gj.webp"
+                            alt="Orvana Trading"
+                            title="Click to open image"
+                          />
+                        </a>
+                        <div class="content">
+                          <div class="infor">
+                            <div class="sub-heading sub">
+                              Handcrafted Products Showcase
+                            </div>
+                            <h3 class="title">
+                              <span>Orvana Trading</span>
+                            </h3>
+                            <div class="tags d-flex gap-3">
+                              <p class="link fw-medium type-tags">
+                                <img
+                                  src="https://files.svgcdn.io/devicon/mongodb.svg"
+                                  alt="MongoDB"
+                                  width="16"
+                                  height="16"
+                                  loading="lazy"
+                                />
+                                MongoDB
+                              </p>
+                              <p class="link fw-medium type-tags">
+                                <img
+                                  src="https://files.svgcdn.io/devicon/express.svg"
+                                  alt="Express"
+                                  width="16"
+                                  height="16"
+                                  loading="lazy"
+                                />
+                                Express
+                              </p>
+                              <p class="link fw-medium type-tags">
+                                <img
+                                  src="https://files.svgcdn.io/material-icon-theme/angular.svg"
+                                  alt="Angular"
+                                  width="16"
+                                  height="16"
+                                  loading="lazy"
+                                />
+                                Angular
+                              </p>
+                              <p class="link fw-medium type-tags">
+                                <img
+                                  src="https://files.svgcdn.io/devicon/nodejs.svg"
+                                  alt="Node.js"
+                                  width="16"
+                                  height="16"
+                                  loading="lazy"
+                                />
+                                Node.js
+                              </p>
+                            </div>
+                          </div>
+                          <div class="btn-links" style="opacity: 0.7">
+                            <span class="material-symbols-outlined"
+                              >arrow_outward</span
+                            >
+                          </div>
+                        </div>
+                      </div>
+
+                      <!-- Project 3: EasyWayRent -->
                       <div class="works-item scrolling-effect effectLeft">
                         <a
                           class="glightbox image"
@@ -1192,17 +1355,17 @@
                         </div>
                       </div>
 
-                      <!-- Project 2: Portfolio -->
+                      <!-- Project 4: Portfolio -->
                       <div class="works-item scrolling-effect effectLeft">
                         <a
                           class="glightbox image"
-                          href="https://res.cloudinary.com/drvz8xmfk/image/upload/f_auto,q_auto/v1762695296/project2_q44r7s.webp"
+                          href="https://res.cloudinary.com/drvz8xmfk/image/upload/f_auto,q_auto/v1762814018/aba_v2cpja.webp"
                           data-gallery="example-1"
                         >
                           <img
                             class="lazyload"
-                            src="https://res.cloudinary.com/drvz8xmfk/image/upload/f_auto,q_auto/v1762695296/project2_q44r7s.webp"
-                            data-src="https://res.cloudinary.com/drvz8xmfk/image/upload/f_auto,q_auto/v1762695296/project2_q44r7s.webp"
+                            src="https://res.cloudinary.com/drvz8xmfk/image/upload/f_auto,q_auto/v1762814018/aba_v2cpja.webp"
+                            data-src="https://res.cloudinary.com/drvz8xmfk/image/upload/f_auto,q_auto/v1762814018/aba_v2cpja.webp"
                             alt="project2"
                             title="Click to open image"
                           />
@@ -1276,7 +1439,7 @@
                         </div>
                       </div>
 
-                      <!-- Project 3: Libraria -->
+                      <!-- Project 5: Libraria -->
                       <div class="works-item scrolling-effect effectLeft">
                         <a
                           class="glightbox image"
@@ -2043,7 +2206,11 @@
                 </div>
               </div>
             </div>
-            <img src="https://res.cloudinary.com/drvz8xmfk/image/upload/f_auto,q_auto/v1762695293/img-bg-2_yi1qwr.png" alt="img-bg" class="map" />
+            <img
+              src="https://res.cloudinary.com/drvz8xmfk/image/upload/f_auto,q_auto/v1762695293/img-bg-2_yi1qwr.png"
+              alt="img-bg"
+              class="map"
+            />
             <div class="box-gradient2"></div>
           </section>
           <!-- /section-contact -->
