--- a/index.html
+++ b/index.html
@@ -1261,11 +1261,16 @@
                               </p>
                             </div>
                           </div>
-                          <div class="btn-links" style="opacity: 0.7">
-                            <span class="material-symbols-outlined"
-                              >arrow_outward</span
-                            >
-                          </div>
+                          <a
+                            href="https://www.orvanaholding.com"
+                            class="btn-links"
+                            title="Visit Website"
+                            target="_blank"
+                            rel="noopener noreferrer"
+                            style="opacity: 0.7"
+                          >
+                            <span class="material-symbols-outlined">arrow_outward</span>
+                          </a>
                         </div>
                       </div>
 
