update orvana project card style and CV

--- a/index.html
+++ b/index.html
@@ -1216,7 +1216,13 @@
                               Handcrafted Products Showcase
                             </div>
                             <h3 class="title">
-                              <span>Orvana Trading</span>
+                              <a
+                                href="https://www.orvanaholding.com"
+                                target="_blank"
+                                title="Visit Website"
+                                rel="noopener noreferrer"
+                                >Orvana Trading</a
+                              >
                             </h3>
                             <div class="tags d-flex gap-3">
                               <p class="link fw-medium type-tags">
@@ -1267,9 +1273,10 @@
                             title="Visit Website"
                             target="_blank"
                             rel="noopener noreferrer"
-                            style="opacity: 0.7"
                           >
-                            <span class="material-symbols-outlined">arrow_outward</span>
+                            <span class="material-symbols-outlined"
+                              >arrow_outward</span
+                            >
                           </a>
                         </div>
                       </div>
